Update index.css to stop horizontal scroll on some pages

--- a/Code/Frontend/src/index.css
+++ b/Code/Frontend/src/index.css
@@ -31,6 +31,8 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+  /* should fix horizontal scroll on pages */
+  justify-content: flex-end; 
 }
 
 h1 {
